# DefectClassifier

./: .gitignore  README.md  api_response_examples.txt  main.py  pyproject.toml  temp_base64.txt  temp_demo.py  test_dm_output.txt  valid_base64.txt  verify_image.py
config/: categories.yaml  model_config.yaml
docs/: external_api.md  refactoring_summary.md  remaining_refactoring.md
scripts/: check_gpu.py  debug_training.py  export_onnx.py  generate_example_responses.py  generate_sample_data.py  populate_inbox.py  run_ui.py  setup_env.bat  test_api.py  test_augmentation_config.py  test_batch_inference.py  test_model_hyperparams.py  test_model_switch.py  test_training_run.py  train.py
src/analysis/: gradcam.py
src/api/: main.py
src/api/routes/: categories.py  health.py  predict.py
src/api/schemas/: request.py  response.py
src/core/: category_manager.py  config.py  constants.py  data_manager.py  data_utils.py  database.py  logger.py  types.py
src/deploy/: onnx_exporter.py  onnx_predictor.py
src/inference/: anomaly_detector.py  predictor.py
src/models/: backbone.py  defect_classifier.py  losses.py  multi_task_head.py
src/services/: watcher.py
src/training/: dataset.py  metrics.py  runner.py  trainer.py
src/ui/: app.py
src/ui/components/: charts.py  image_viewer.py  info_card.py
src/ui/pages/: __init__.py  settings.py
src/utils/: report_generator.py
tests/: conftest.py  output.txt  test_advanced.py  test_api.py  test_core.py  test_data_manager.py  test_database.py  test_details.py  test_full_workflow.py  test_model.py  test_watcher.py
(+8 files in other folders)
